--- a/src/Components/Clear.css
+++ b/src/Components/Clear.css
@@ -7,11 +7,17 @@
   border:black solid;
   background-color: #fe9241;
   color: #ffffff;
-  height:2.5em;
+  height:2.7em;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.4em;
+  font-size: 1.2em;
   font-weight: bold;
   flex:1;
+}
+
+.clear-content:active {
+  box-shadow: inset;
+  transform: scale(0.95);
+  background-color: #a1571f;
 }
